# AyPII-TPFuncional

./: AyPII-TPFuncional.cabal  RobotsTest.hs  robots.hs  test.hs
