cabal-version:      3.0
name:               AyPII-TPFuncional
version:            0.1.0.0
synopsis:           Trabajo práctico de Algoritmos y Programación II
description:        Proyecto simple con lógica en Robots.hs y tests en RobotsTest.hs.
license:            MIT
license-file:       LICENSE
author:             Altamiran0
maintainer:         altamirano.41avc@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Robots
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   .
    build-depends:    base ^>=4.17.2.1
    default-language: Haskell2010

test-suite AyPII-TPFuncional-test
    import:           warnings
    other-modules:    Robots
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   .
    main-is:          RobotsTest.hs
    build-depends:
        base ^>=4.17.2.1,
        HUnit,
        AyPII-TPFuncional
    default-language: Haskell2010
